# noc-commit-hooks

./: .gitignore  .perltidyrc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Dockerfile  Makefile.PL  README.md  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yaml  codeql-analysis.yml  perl.yaml  perl.yml  pre-commit.yml  python-tox.yml  python.yaml
hooks/: check-dhcp-config.sh  check-dns-config.sh  check-dns-serial.sh  check-ipv6-case.pl  check-ipv6.pl  check-macaddr-case.pl  check_ascii.py  check_dhcphost_format.py  check_dns_cname.py  require_ascii.py
pre_commit_hooks/: check-ipv6.pl
tests/: HookUtils.pm  check-ipv6-case.t  check-macaddr.case.t  test_ascii.invalid.txt  test_ascii.py  test_ascii.valid.txt  test_dhcphost_format.invalid.txt  test_dhcphost_format.py  test_dhcphost_format.valid.txt  test_dns_cname.invalid.txt  test_dns_cname.py  test_dns_cname.valid.txt  util_test.py
