[metadata]
name = noc_commit_hooks
version = 1.0.0
description = Check DHCP host entries matches standard format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bowdoincollege/noc-commit-hooks
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
install_requires =
    regex
    termcolor
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    check-dhcphost-format = hooks.check_dhcphost_format:main
