[metadata]
name = noc_commit_hooks
version = 1.6.4
description = Check DNS/DHCP configuration files for syntax and organization standards
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bowdoincollege/noc-commit-hooks
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    regex
    termcolor
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    check-dhcphost-format = hooks.check_dhcphost_format:main
    check-dns-cname = hooks.check_dns_cname:main
